--- a/WebBanCafeV3/src/main/resources/static/css/style.css
+++ b/WebBanCafeV3/src/main/resources/static/css/style.css
@@ -269,7 +269,7 @@ button {
 }
 
 .navbar {
-    padding: 15px 50px;
+    padding: 15px 40px;
 }
 
 .user_icon {
@@ -720,6 +720,53 @@ button {
     background-color: #ffffff;
     box-shadow: 0px 0px 20px 0px;
     padding: 0px 0px 30px 0px;
+}
+
+.card {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+    width: 300px;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card-img-top {
+    width: 100%;
+    height: auto;
+    max-height: 200px;
+}
+
+.card-body {
+    padding: 1.25rem;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: -1rem;
+}
+
+.card-text {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+    color: #fff;
+}
+
+.btn-primary:hover {
+    background-color: #0069d9;
+    border-color: #0062cc;
 }
 
 .blog_img {
